# Mayhem

./: pyproject.toml
mandrill/: mayhem_1.py  mayhem_2.py  mayhem_3.py
tests/: test_mandrill.py  test_mandrill_2.py  test_mandrill_main_4.py  test_mandrill_mock_3.py
