[tool.poetry]
name = "mandrill"
version = "0.1.0"
description = ""
authors = ["Андрей Тарасенко <tarasenko@algont.ru>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "*"
black = {version = "^22.8.0", allow-prereleases = true}
isort = "^5.10.1"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
